website creation added

--- a/Exercise1/distributed-systems.html
+++ b/Exercise1/distributed-systems.html
@@ -120,10 +120,10 @@
                     </div>
                 </section>
 
-                <!-- Course -- Distributed Programming with Jav -->
+                <!-- Course -- Distributed Programming with Java -->
                 <section class="course" id="course-3">
                     <div class="course-top">
-                        <h2>Distributed Programming with Jav</h2>
+                        <h2>Distributed Programming with Java</h2>
                     </div>
                     <div class="course-left">
                         <p>
