--- a/Exercise1/web-site-creation.html
+++ b/Exercise1/web-site-creation.html
@@ -42,10 +42,10 @@
             </div>
             <div class="section-info">
                 <p>
-                    A distributed system, also known as distributed computing, is a system with multiple components located on different 
-                    machines that communicate and coordinate actions in order to appear as a single coherent system to the end-user.
-                    These courses will serve as an introduction in distributed computing, and in the creation of such a system. You will
-                    also learn to use java.net. 
+                    Everyone will visit many websites as they surf online. They seem so different at first, but if you take a closer look, the
+                    similarities are endless. In these courses you will learn to use the basic building blocks of every Website and practice with them
+                    while building your own webpage.
+                    
                 </p>
             </div>
         </section>
@@ -56,143 +56,138 @@
                 <nav>
                     <h2>Courses</h2>
                     <ul>
-                        <li><a href="#dscourse-1">Introduction, Performance And Consistancy</a></li>
-                        <li><a href="#dscourse-2">Cloud Computing</a></li>
-                        <li><a href="#dscourse-3">Distributed Programming with Java</a></li>
-                        <li><a href="#dscourse-4">Framework</a></li>
-                        <li><a href="#dscourse-5">Create an Distributed App</a></li>
+                        <li><a href="#wscourse-1">Introduction, and HTML</a></li>
+                        <li><a href="#wscourse-2">Cascading Style Sheets</a></li>
+                        <li><a href="#wscourse-3">Website Functionality- JS</a></li>
+                        <li><a href="#wscourse-4">Full-Stack Developement</a></li>
+                        <li><a href="#wscourse-5">Introduction to API</a></li>
                     </ul>
                 </nav>
             </aside>
 
             <!-- Course info -->
             <section class="course-list">
-                <!-- Course -- Introduction, Performance And Consistancy -->
+                <!-- Course -- Introduction, and HTML -->
                 <section class="course" id="dscourse-1">
                     <div class="course-top">
-                        <h2>Introduction, Performance And Consistancy</h2>
+                        <h2>Introduction, and HTML</h2>
                     </div>
                     <div class="course-left">
                         <p>
-                            In this course, you will study basic terms of Distributed computing and Aquire their primary knowledge.
+                            In this course, you will study the basic terms you need to know before starting to build your Website,
+                            and learn the basic principles of HTML
                         </p>
-                        <a href="https://www.coursera.org/learn/blockchain-scalability">Coursera</a>
+                        <a href="https://www.coursera.org/learn/html">Coursera course for html</a>
                         <p>Cost: $15</p>
                     </div>
                     <div class="course-right">
-                        <img src="" alt="">
+                        <img src="img/banner-html.png" alt="html banner">
                     </div>
                     <div class="course-bottom">
                         <h3>Syllabus - What you will learn from this course</h3>
                         <ol>
-                            <li>Introduction to Distributed Systems</li>
-                            <li>Distributed Systems Basics</li>
-                            <li>Different Types and Applications of Distributed Systems</li>
+                            <li>Basic Web history</li>
+                            <li>HTML 5 </li>
                         </ol>
                     </div>
                 </section>
 
-                <!-- Course -- Cloud Computing -->
+                <!-- Course -- Network Basics- Internet -->
                 <section class="course" id="dscourse-2">
                     <div class="course-top">
-                        <h2> Cloud Computing</h2>
+                        <h2>Network Basics- Internet</h2>
                     </div>
                     <div class="course-left">
                         <p>
-                            Cloud computing systems today, whether open-source or used inside companies, 
-                            are built using a common set of core techniques, algorithms, and design philosophies –
-                             all centered around distributed systems. 
-                            Learn about such fundamental distributed computing "concepts" for cloud computing.
-                        </p>
-                        <a href="https://www.coursera.org/learn/cloud-computing">Coursera</a>
+                            In this course you will learn about the basic principles that are used in Webpage Functionality, from the prespective
+                            of the Internet. You will get familiar with web protocols, requests, and terms 
+                        <a href="https://www.coursera.org/learn/introcss">Coursera</a>
                         <p>Cost: $20</p>
                     </div>
                     <div class="course-right">
-                        <img src="" alt="">
+                        <img src="img/banner-css.png" alt="css banner">
                     </div>
                     <div class="course-bottom">
                         <h3>Syllabus - What you will learn from this course</h3>
                         <ol>
-                            <li>Cloud computing</li>
-                            <li>Distributed Algorithms</li>
-                            <li>C++</li>
+                            <li>HTML5</li>
+                            <li>CSS</li>
                         </ol>
                     </div>
                 </section>
 
-                <!-- Course -- Distributed Programming with Jav -->
+                <!-- Course -- Website Functionality- JS     -->
                 <section class="course" id="course-3">
                     <div class="course-top">
-                        <h2>Distributed Programming with Jav</h2>
+                        <h2>Website Functionality- JS</h2>
                     </div>
                     <div class="course-left">
                         <p>
-                            In this course, you will learn how to use java libraries like .net to build basic blocks for your very own Distributed
-                            System. Your will learn how to send messeges and information between different programms, parallel cimputing using java.thread
-                            and more.
-                        <a href="https://www.coursera.org/specializations/pcdp">Coursera</a>
+                            In this course, you will learn how to add Functionality to your Website, with javascript. Icldues Introduction
+                            to javascript and object oriented programming, JSON, and step by step tutorials. 
+                        <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">Udemy</a>
                         <p>Cost: $40</p>
                     </div>
                     <div class="course-right">
-                        <img src="" alt="">
+                        <img src="img/banner-js.png" alt="js banner">
                     </div>
                     <div class="course-bottom">
                         <h3>Syllabus - What you will learn from this course</h3>
                         <ol>
-                            <li>Parallel Computing</li>
-                            <li>Distributed Computing</li>
-                            <li>Actor Model </li>
-                            <li>Java.net</li>
+                            <li> Object oriented programming</li>
+                            <li>javascript</li>
+                            <li>JSON </li>
+                            <li>HTML</li>
                         </ol>
                     </div>
                 </section>
 
-                <!-- Course -- Frameworks -->
+                <!-- Course -- Full-Stack Developement -->
                 <section class="course" id="dscourse-4">
                     <div class="course-top">
-                        <h2>Frameworks</h2>
+                        <h2>Full-Stack Developement</h2>
                     </div>
                     <div class="course-left">
                         <p>
-                            In this course, you will begin creating your Distributed System. The First step is creating the base of the app, which is the Framework,
-                            an app that can funtion as your data base, client server or model creator 
+                            Become a Full-Stack Web Developer with just ONE course. HTML, CSS, Javascript, Node, React, MongoDB, build real projects 
                         <a href="https://www.coursera.org/learn/spark-sql">Coursera</a>
                         <p>Cost: $40</p>
                     </div>
                     <div class="course-right">
-                        <img src="img/banner-course-4.jpg" alt="convolutional neural networks banner">
+                        <img src="img/banner-fullstack.png" alt="full stack banner">
                     </div>
                     <div class="course-bottom">
                         <h3>Syllabus - What you will learn from this course</h3>
                         <ol>
-                            <li>Server implementation</li>
-                            <li>Sql</li>
-                            <li>java.net</li>
-                            <li>Special Applications: Face recognition & Neural Style Transfer</li>
+                            <li>Fullstack Developement</li>
+                            <li>MongoDB</li>
+                            <li>Javascript</li>
+                            <li>JSON </li>
+                            <li>HTML</li>
                         </ol>
                     </div>
                 </section>
 
-                 <!-- Course -- Create an Distributed App -->
+                 <!-- Course -- Introduction to API -->
                  <section class="course" id="dscourse-5">
                     <div class="course-top">
-                        <h2>Create an Distributed App</h2>
+                        <h2>Introduction to API/h2>
                     </div>
                     <div class="course-left">
                         <p>
-                            In this course, you will learn how to create an app that distributes your framework and completes your sysytem.
-                            You will also learn the basics for creating an android app.
+                            In this course, you will learn how to Developing APIs with Google Cloud's Apigee API Platform Specialization
                         </p>
-                        <a href="https://www.coursera.org/projects/android-app-kotlin">Coursera</a>
+                        <a href="https://www.coursera.org/specializations/apigee-api-gcp">Coursera</a>
                         <p>Cost: $40</p>
                     </div>
                     <div class="course-right">
-                        <img src="img/banner-course-5.jpg" alt="sequence models banner">
+                        <img src="img/banner-api.png" alt="api banner">
                     </div>
                     <div class="course-bottom">
                         <h3>Syllabus - What you will learn from this course</h3>
                         <ol>
-                            <li>Android Application</li>
+                            <li>API sequrity</li>
+                            <li>Intro for API</li>
                         </ol>
                     </div>
                 </section>
