--- a/Exercise1/contact.html
+++ b/Exercise1/contact.html
@@ -16,7 +16,7 @@
         <nav class="navbar">
             <!-- Webpage icon -->
             <div class="page-icon">
-                <img src="" alt="webpage icon">
+                <img src="img/logo2.jpg" alt="webpage icon">
             </div>
             <!-- Webpage name -->
             <div class="page-name">
@@ -58,6 +58,8 @@
                     <option value="" selected>--Please choose an option--</option>
                     <option value="+30"> +30 Greece </option>
                     <option value="+1"> +1 USA</option>
+                    <option value="+92"> +92 Pakistan</option>
+                    <option value="+666">+666 Mars</option>
                 </select>
 
                 <label for="In_phone"> Phone : </label>
