--- a/Exercise1/index.html
+++ b/Exercise1/index.html
@@ -16,7 +16,7 @@
         <nav class="navbar">
             <!-- Webpage icon -->
             <div class="page-icon">
-                <img src="" alt="webpage icon">
+                <img src="img/logo2.jpg" alt="webpage icon">
             </div>
             <!-- Webpage name -->
             <div class="page-name">
@@ -47,47 +47,49 @@
             </div>
         </section>
 
-        <!-- Search bar --> <!-- i will use some different tags like field and label-->
+        <!-- Search bar --> 
          <section class="search">
             <div class="section-title">
                 <h2> What do you want to learn ?</h2>
             </div>
             <form action="#"  method="post">
-                <input class="search-box" type="text" name="query" placeholder="Search...">
+                <input id="seach" class="search-box" type="text" name="query" placeholder="Search...">
                 <button class="search-btn" type="submit" >Search</button>
             </form>
         </section>
         
-        <!-- Information --> <!-- ayto na ginei me dl lista-->
+        <!-- Information --> 
         <section class="banner">
             <!-- Principles -->
             <div class="banner-left">
-                <h2>Becoming better</h2>
-                <p>
-                    With more than two dozen distinct learning features to help you achieve your goals, 
-                    our approach follows four key principles:
-                </p>
-                <h3>Learn</h3>
-                <p>
-                    Learn new knowledge and skills in a variety of ways, from engaging video lectures and hand-out meaterial to 
-                    interactive elements and weekly seminars. 
-                </p>
-                <h3>Practice</h3>
-                <p>
-                    Demonstrating your knowledge is a critical part of learning. 
-                    SkillDev courses provide a space to practice with quick daily challenges and virtual labs.
-                    All of course on cloud premises.
-                </p>
-                <h3>Assess</h3>
-                <p>
-                    Test your skills by solving real-world problems through projects. Whats more?
-                    You can track your progress in our self-tailored dashboards!
-                </p>
-                <h3>Apply</h3>
-                <p>
-                    Transform how you think and what you can do. Translate your skills into real-world tools
-                    and apply your capabilities in the context of your job. Our certifates can make you a challenging candidate!
-                </p>
+                <dl>
+                    <dt>Becoming better</dt>
+                    <dd>
+                        With more than two dozen distinct learning features to help you achieve your goals, 
+                        our approach follows four key principles:
+                    </dd>
+                    <dt>Learn</dt>
+                    <dd>
+                        Learn new knowledge and skills in a variety of ways, from engaging video lectures and hand-out meaterial to 
+                        interactive elements and weekly seminars. 
+                    </dd>
+                    <dt>Practice</dt>
+                    <dd>
+                        Demonstrating your knowledge is a critical part of learning. 
+                        SkillDev courses provide a space to practice with quick daily challenges and virtual labs.
+                        All of course on cloud premises.
+                    </dd>
+                    <dt>Assess</dt>
+                    <dd>
+                        Test your skills by solving real-world problems through projects. Whats more?
+                        You can track your progress in our self-tailored dashboards!
+                    </dd>
+                    <dt>Apply</dt>
+                    <dd>
+                        Transform how you think and what you can do. Translate your skills into real-world tools
+                        and apply your capabilities in the context of your job. Our certifates can make you a challenging candidate!
+                    </dd>
+                </dl>
             </div>
             <div class="banner-right">
                 <img src="img/banner-rubics-cube.png" alt="rubics cube">
