--- a/Exercise1/topics.html
+++ b/Exercise1/topics.html
@@ -16,7 +16,7 @@
         <nav class="navbar">
             <!-- Webpage icon -->
             <div class="page-icon">
-                <img src="" alt="webpage icon">
+                <img src="img/logo2.jpg" alt="webpage icon">
             </div>
             <!-- Webpage name -->
             <div class="page-name">
@@ -101,8 +101,8 @@
                 <h2>Business Science</h2>
                 <ul>
                     <li>Human Resources </li>
-                    <li>Brand Awareness</a></li>
-                    <li>Risk Management</a></li>
+                    <li>Brand Awareness</li>
+                    <li>Risk Management</li>
                 </ul>
             </div>
             <div class="banner-left">
