--- a/Exercise1/web-site-creation.html
+++ b/Exercise1/web-site-creation.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Free online classes for numerus Computer Science fields.">
     <meta name="author" content="Georgios-Stefanos Meidanis (3170107), Lampros Lountzis (3170095)">
     <meta name="keywords" content="MOOC, Free, Online, Classes, CS, Informatics, SkillDev">
-    <title>Distributed Systems| SkillDev</title>
+    <title>Website Creation| SkillDev</title>
 </head>
 <body>
    <!-- Header bar -->
@@ -16,7 +16,7 @@
         <nav class="navbar">
             <!-- Webpage icon -->
             <div class="page-icon">
-                <img src="" alt="webpage icon">
+                <img src="img/logo2.jpg" alt="webpage icon">
             </div>
             <!-- Webpage name -->
             <div class="page-name">
@@ -77,7 +77,7 @@
                             In this course, you will study the basic terms you need to know before starting to build your Website,
                             and learn the basic principles of HTML
                         </p>
-                        <a href="https://www.coursera.org/learn/html">Coursera course for html</a>
+                        <a href="https://www.coursera.org/learn/html">Coursera </a>
                         <p>Cost: $15</p>
                     </div>
                     <div class="course-right">
