--- a/Exercise1/distributed-systems.html
+++ b/Exercise1/distributed-systems.html
@@ -16,7 +16,7 @@
         <nav class="navbar">
             <!-- Webpage icon -->
             <div class="page-icon">
-                <img src="" alt="webpage icon">
+                <img src="img/logo2.jpg" alt="webpage icon">
             </div>
             <!-- Webpage name -->
             <div class="page-name">
