bug fixes, image resizing, renaming

--- a/Exercise1/distributed-systems.html
+++ b/Exercise1/distributed-systems.html
@@ -16,7 +16,7 @@
         <nav class="navbar">
             <!-- Webpage icon -->
             <div class="page-icon">
-                <img src="img/logo2.jpg" alt="webpage icon">
+                <img src="img/logo-md.jpg" alt="webpage icon">
             </div>
             <!-- Webpage name -->
             <div class="page-name">
@@ -44,8 +44,7 @@
                 <p>
                     A distributed system, also known as distributed computing, is a system with multiple components located on different 
                     machines that communicate and coordinate actions in order to appear as a single coherent system to the end-user.
-                    These courses will serve as an introduction in distributed computing, and in the creation of such a system. You will
-                    also learn to use java.net. 
+                    These courses will serve as an introduction in distributed computing, and in the creation of such a system.
                 </p>
             </div>
         </section>
@@ -56,11 +55,11 @@
                 <nav>
                     <h2>Courses</h2>
                     <ul>
-                        <li><a href="#dscourse-1">Introduction, Performance And Consistancy</a></li>
-                        <li><a href="#dscourse-2">Cloud Computing</a></li>
-                        <li><a href="#dscourse-3">Distributed Programming with Java</a></li>
-                        <li><a href="#dscourse-4">Framework</a></li>
-                        <li><a href="#dscourse-5">Create an Distributed App</a></li>
+                        <li><a href="#ds-course-1">Introduction, Performance And Consistancy</a></li>
+                        <li><a href="#ds-course-2">Cloud Computing</a></li>
+                        <li><a href="#ds-course-3">Distributed Programming with Java</a></li>
+                        <li><a href="#ds-course-4">Framework</a></li>
+                        <li><a href="#ds-course-5">Create an Distributed App</a></li>
                     </ul>
                 </nav>
             </aside>
@@ -68,7 +67,7 @@
             <!-- Course info -->
             <section class="course-list">
                 <!-- Course -- Introduction, Performance And Consistancy -->
-                <section class="course" id="dscourse-1">
+                <section class="course" id="ds-course-1">
                     <div class="course-top">
                         <h2>Introduction, Performance And Consistancy</h2>
                     </div>
@@ -93,7 +92,7 @@
                 </section>
 
                 <!-- Course -- Cloud Computing -->
-                <section class="course" id="dscourse-2">
+                <section class="course" id="ds-course-2">
                     <div class="course-top">
                         <h2> Cloud Computing</h2>
                     </div>
@@ -121,7 +120,7 @@
                 </section>
 
                 <!-- Course -- Distributed Programming with Java -->
-                <section class="course" id="course-3">
+                <section class="course" id="ds-course-3">
                     <div class="course-top">
                         <h2>Distributed Programming with Java</h2>
                     </div>
@@ -130,6 +129,7 @@
                             In this course, you will learn how to use java libraries like .net to build basic blocks for your very own Distributed
                             System. Your will learn how to send messeges and information between different programms, parallel cimputing using java.thread
                             and more.
+                        </p>
                         <a href="https://www.coursera.org/specializations/pcdp">Coursera</a>
                         <p>Cost: $40</p>
                     </div>
@@ -148,7 +148,7 @@
                 </section>
 
                 <!-- Course -- Frameworks -->
-                <section class="course" id="dscourse-4">
+                <section class="course" id="ds-course-4">
                     <div class="course-top">
                         <h2>Frameworks</h2>
                     </div>
@@ -156,6 +156,7 @@
                         <p>
                             In this course, you will begin creating your Distributed System. The First step is creating the base of the app, which is the Framework,
                             an app that can funtion as your data base, client server or model creator 
+                        </p>
                         <a href="https://www.coursera.org/learn/spark-sql">Coursera</a>
                         <p>Cost: $40</p>
                     </div>
@@ -174,7 +175,7 @@
                 </section>
 
                  <!-- Course -- Create an Distributed App -->
-                 <section class="course" id="dscourse-5">
+                 <section class="course" id="ds-course-5">
                     <div class="course-top">
                         <h2>Create an Distributed App</h2>
                     </div>
