--- a/Exercise1/machine-learning.html
+++ b/Exercise1/machine-learning.html
@@ -16,7 +16,7 @@
         <nav class="navbar">
             <!-- Webpage icon -->
             <div class="page-icon">
-                <img src="img/logo2.jpg" alt="webpage icon">
+                <img src="img/logo-md.jpg" alt="webpage icon">
             </div>
             <!-- Webpage name -->
             <div class="page-name">
@@ -59,11 +59,11 @@
                 <nav>
                     <h2>Courses</h2>
                     <ul>
-                        <li><a href="#course-1">Neural Networks and Deep Learning</a></li>
-                        <li><a href="#course-2">Improving Deep Neural Networks: Hyperparameter Tuning, Regularization and Optimization</a></li>
-                        <li><a href="#course-3">Structuring Machine Learning Projects</a></li>
-                        <li><a href="#course-4">Convolutional Neural Networks</a></li>
-                        <li><a href="#course-5">Sequence Models</a></li>
+                        <li><a href="#ml-course-1">Neural Networks and Deep Learning</a></li>
+                        <li><a href="#ml-course-2">Improving Deep Neural Networks: Hyperparameter Tuning, Regularization and Optimization</a></li>
+                        <li><a href="#ml-course-3">Structuring Machine Learning Projects</a></li>
+                        <li><a href="#ml-course-4">Convolutional Neural Networks</a></li>
+                        <li><a href="#ml-course-5">Sequence Models</a></li>
                     </ul>
                 </nav>
             </aside>
@@ -71,7 +71,7 @@
             <!-- Course info -->
             <section class="course-list">
                 <!-- Course -- Neural Networks and Deep Learning -->
-                <section class="course" id="course-1">
+                <section class="course" id="ml-course-1">
                     <div class="course-top">
                         <h2>Neural Networks and Deep Learning</h2>
                     </div>
@@ -85,7 +85,7 @@
                         <p>Cost: $40</p>
                     </div>
                     <div class="course-right">
-                        <img src="img/banner-course-1.jpg" alt="neural networks and deep learning banner">
+                        <img src="img/banner-ml-course-1.jpg" alt="neural networks and deep learning banner">
                     </div>
                     <div class="course-bottom">
                         <h3>Syllabus - What you will learn from this course</h3>
@@ -99,7 +99,7 @@
                 </section>
 
                 <!-- Course -- Improving Deep Neural Networks: Hyperparameter Tuning, Regularization and Optimization -->
-                <section class="course" id="course-2">
+                <section class="course" id="ml-course-2">
                     <div class="course-top">
                         <h2>Improving Deep Neural Networks: Hyperparameter Tuning, Regularization and Optimization</h2>
                     </div>
@@ -117,7 +117,7 @@
                         <p>Cost: $40</p>
                     </div>
                     <div class="course-right">
-                        <img src="img/banner-course-2.jpg" alt="improving deep neural networks banner">
+                        <img src="img/banner-ml-course-2.jpg" alt="improving deep neural networks banner">
                     </div>
                     <div class="course-bottom">
                         <h3>Syllabus - What you will learn from this course</h3>
@@ -130,7 +130,7 @@
                 </section>
 
                 <!-- Course -- Structuring Machine Learning Projects -->
-                <section class="course" id="course-3">
+                <section class="course" id="ml-course-3">
                     <div class="course-top">
                         <h2>Structuring Machine Learning Projects</h2>
                     </div>
@@ -146,7 +146,7 @@
                         <p>Cost: $40</p>
                     </div>
                     <div class="course-right">
-                        <img src="img/banner-course-3.jpg" alt="structuring machine learning projects banner">
+                        <img src="img/banner-ml-course-3.jpg" alt="structuring machine learning projects banner">
                     </div>
                     <div class="course-bottom">
                         <h3>Syllabus - What you will learn from this course</h3>
@@ -158,7 +158,7 @@
                 </section>
 
                 <!-- Course -- Convolutional Neural Networks -->
-                <section class="course" id="course-4">
+                <section class="course" id="ml-course-4">
                     <div class="course-top">
                         <h2>Convolutional Neural Networks</h2>
                     </div>
@@ -175,7 +175,7 @@
                         <p>Cost: $40</p>
                     </div>
                     <div class="course-right">
-                        <img src="img/banner-course-4.jpg" alt="convolutional neural networks banner">
+                        <img src="img/banner-ml-course-4.jpg" alt="convolutional neural networks banner">
                     </div>
                     <div class="course-bottom">
                         <h3>Syllabus - What you will learn from this course</h3>
@@ -189,7 +189,7 @@
                 </section>
 
                  <!-- Course -- Sequence Models -->
-                 <section class="course" id="course-5">
+                 <section class="course" id="ml-course-5">
                     <div class="course-top">
                         <h2>Sequence Models</h2>
                     </div>
@@ -206,7 +206,7 @@
                         <p>Cost: $40</p>
                     </div>
                     <div class="course-right">
-                        <img src="img/banner-course-5.jpg" alt="sequence models banner">
+                        <img src="img/banner-ml-course-5.jpg" alt="sequence models banner">
                     </div>
                     <div class="course-bottom">
                         <h3>Syllabus - What you will learn from this course</h3>
