--- a/Exercise1/topics.html
+++ b/Exercise1/topics.html
@@ -16,7 +16,7 @@
         <nav class="navbar">
             <!-- Webpage icon -->
             <div class="page-icon">
-                <img src="img/logo2.jpg" alt="webpage icon">
+                <img src="img/logo-md.jpg" alt="webpage icon">
             </div>
             <!-- Webpage name -->
             <div class="page-name">
@@ -42,9 +42,9 @@
             </div>
             <div class="section-info">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                    Quidem non odit possimus sequi. 
-                    Enim voluptas dicta atque itaque, est autem nostrum fugit recusandae possimus exercitationem iure nesciunt alias veritatis nam.
+                    Whether you’re looking to start a new career or change your current one, courses on SkillDev
+                    help you become job ready. Learn at your own pace from top companies, apply your new skills to hands-on 
+                    projects that showcase your expertise to potential employers, and earn a career credential to kickstart your new career.
                 </p>
             </div>
         </section>
@@ -69,13 +69,13 @@
             <div class="banner-right">
                 <h2>Application Development</h2>
                 <ul>
-                    <li>Android Applications </li>
-                    <li><a href="website-creation.html">Website Creation</a></li>
-                    <li><a href="distributed-sustems.html">Distributed Systems</a></li>
+                    <li>Android Application Develoment</li>
+                    <li><a href="web-dev.html">Web Development</a></li>
+                    <li><a href="distributed-systems.html">Distributed Systems</a></li>
                 </ul>
             </div>
             <div class="banner-left">
-                <img src="img/Website-banner.jpg" alt="website banner">
+                <img src="img/banner-app-dev.jpg" alt="application development banner">
             </div>
         </section>
 
@@ -106,7 +106,7 @@
                 </ul>
             </div>
             <div class="banner-left">
-                <img src="img/business-banner.jpg" alt="business banner">
+                <img src="img/banner-business-science.jpg" alt="business science banner">
             </div>
         </section>
 
