--- a/Exercise1/web-dev.html
+++ b/Exercise1/web-dev.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Free online classes for numerus Computer Science fields.">
     <meta name="author" content="Georgios-Stefanos Meidanis (3170107), Lampros Lountzis (3170095)">
     <meta name="keywords" content="MOOC, Free, Online, Classes, CS, Informatics, SkillDev">
-    <title>Website Creation| SkillDev</title>
+    <title>Web Devlopemnt | SkillDev</title>
 </head>
 <body>
    <!-- Header bar -->
@@ -16,7 +16,7 @@
         <nav class="navbar">
             <!-- Webpage icon -->
             <div class="page-icon">
-                <img src="img/logo2.jpg" alt="webpage icon">
+                <img src="img/logo-md.jpg" alt="webpage icon">
             </div>
             <!-- Webpage name -->
             <div class="page-name">
@@ -42,9 +42,9 @@
             </div>
             <div class="section-info">
                 <p>
-                    Everyone will visit many websites as they surf online. They seem so different at first, but if you take a closer look, the
-                    similarities are endless. In these courses you will learn to use the basic building blocks of every Website and practice with them
-                    while building your own webpage.
+                    Everyone visits many different websites as they surf online. They seem so different at first, but if you take a closer 
+                    look, the similarities are endless. In these courses you will learn to use the basic building blocks of web 
+                    development and practice with them while building your own webpage.
                     
                 </p>
             </div>
@@ -56,21 +56,21 @@
                 <nav>
                     <h2>Courses</h2>
                     <ul>
-                        <li><a href="#wscourse-1">Introduction, and HTML</a></li>
-                        <li><a href="#wscourse-2">Cascading Style Sheets</a></li>
-                        <li><a href="#wscourse-3">Website Functionality- JS</a></li>
-                        <li><a href="#wscourse-4">Full-Stack Developement</a></li>
-                        <li><a href="#wscourse-5">Introduction to API</a></li>
+                        <li><a href="#wb-course-1">Introduction to HTML</a></li>
+                        <li><a href="#wb-course-2">Cascading Style Sheets</a></li>
+                        <li><a href="#wb-course-3">Website Functionality - JS</a></li>
+                        <li><a href="#wb-course-4">Full-Stack Developement</a></li>
+                        <li><a href="#wb-course-5">Introduction to APIs</a></li>
                     </ul>
                 </nav>
             </aside>
 
             <!-- Course info -->
             <section class="course-list">
-                <!-- Course -- Introduction, and HTML -->
-                <section class="course" id="dscourse-1">
+                <!-- Course -- Introduction to HTML -->
+                <section class="course" id="wb-course-1">
                     <div class="course-top">
-                        <h2>Introduction, and HTML</h2>
+                        <h2>Introduction to HTML</h2>
                     </div>
                     <div class="course-left">
                         <p>
@@ -81,113 +81,133 @@
                         <p>Cost: $15</p>
                     </div>
                     <div class="course-right">
-                        <img src="img/banner-html.png" alt="html banner">
+                        <img src="img/banner-wb-course-1.png" alt="intorduction to html banner">
                     </div>
                     <div class="course-bottom">
                         <h3>Syllabus - What you will learn from this course</h3>
                         <ol>
-                            <li>Basic Web history</li>
-                            <li>HTML 5 </li>
+                            <li>Web history</li>
+                            <li>HTML 5 - Beginner</li>
+                            <li>HTML 5 - Intermediate</li>
+                            <li>HTML 5 - Expert</li>
                         </ol>
                     </div>
                 </section>
 
-                <!-- Course -- Network Basics- Internet -->
-                <section class="course" id="dscourse-2">
+                <!-- Course -- Cascading Style Sheets -->
+                <section class="course" id="wb-course-2">
                     <div class="course-top">
-                        <h2>Network Basics- Internet</h2>
+                        <h2>Cascading Style Sheets</h2>
                     </div>
                     <div class="course-left">
                         <p>
-                            In this course you will learn about the basic principles that are used in Webpage Functionality, from the prespective
-                            of the Internet. You will get familiar with web protocols, requests, and terms 
+                            The web today is almost unrecognizable from the early days of white pages with lists of blue links.
+                            Now, sites are designed with complex layouts, unique fonts, and customized color schemes. 
+                            This course will show you the basics of Cascading Style Sheets (CSS3).  
+                            The emphasis will be on learning how to write CSS rules, how to test code, and how to establish good programming habits.   
+                        </p>
                         <a href="https://www.coursera.org/learn/introcss">Coursera</a>
                         <p>Cost: $20</p>
                     </div>
                     <div class="course-right">
-                        <img src="img/banner-css.png" alt="css banner">
+                        <img src="img/banner-wb-course-2.png" alt="cascading style sheets banner">
                     </div>
                     <div class="course-bottom">
                         <h3>Syllabus - What you will learn from this course</h3>
                         <ol>
-                            <li>HTML5</li>
-                            <li>CSS</li>
+                            <li>Getting Started with Simple Styling</li>
+                            <li>Advanced Styling</li>
+                            <li>Psuedo-classes, Pseudo-elements, Transitions, and Positioning</li>
+                            <li>Putting It All Together</li>
+                            <li>Where To Go From Here?</li>
                         </ol>
                     </div>
                 </section>
 
-                <!-- Course -- Website Functionality- JS     -->
-                <section class="course" id="course-3">
+                <!-- Course -- Website Functionality - JS -->
+                <section class="course" id="wb-course-3">
                     <div class="course-top">
                         <h2>Website Functionality- JS</h2>
                     </div>
                     <div class="course-left">
                         <p>
-                            In this course, you will learn how to add Functionality to your Website, with javascript. Icldues Introduction
-                            to javascript and object oriented programming, JSON, and step by step tutorials. 
-                        <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">Udemy</a>
+                            In this course, you will learn how to add Functionality to your Website, with Javascript. Icldues Introduction
+                            to Javascript and Object Oriented Programming, JSON, and step by step tutorials. 
+                        </p>
+                        <a href="https://www.coursera.org/specializations/javascript-beginner">Coursera</a>
                         <p>Cost: $40</p>
                     </div>
                     <div class="course-right">
-                        <img src="img/banner-js.png" alt="js banner">
+                        <img src="img/banner-wb-course-3.png" alt="website functionality - js banner">
                     </div>
                     <div class="course-bottom">
                         <h3>Syllabus - What you will learn from this course</h3>
                         <ol>
-                            <li> Object oriented programming</li>
-                            <li>javascript</li>
-                            <li>JSON </li>
-                            <li>HTML</li>
+                            <li>Object oriented programming</li>
+                            <li>JavaScript Basics</li>
+                            <li>Animation with JavaScript and jQuery</li>
+                            <li>Interactivity with JavaScript and jQuery</li>
+                            <li>JSON and Data Manipulation in JavaScript</li>
                         </ol>
                     </div>
                 </section>
 
                 <!-- Course -- Full-Stack Developement -->
-                <section class="course" id="dscourse-4">
+                <section class="course" id="wb-course-4">
                     <div class="course-top">
                         <h2>Full-Stack Developement</h2>
                     </div>
                     <div class="course-left">
                         <p>
-                            Become a Full-Stack Web Developer with just ONE course. HTML, CSS, Javascript, Node, React, MongoDB, build real projects 
-                        <a href="https://www.coursera.org/learn/spark-sql">Coursera</a>
+                            Become a Full-Stack Web Developer with just ONE course. HTML, CSS, Javascript, Node, MongoDB, 
+                            and build real projects.
+                        </p>
+                        <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">Coursera</a>
                         <p>Cost: $40</p>
                     </div>
                     <div class="course-right">
-                        <img src="img/banner-fullstack.png" alt="full stack banner">
+                        <img src="img/banner-wb-course-4.jpeg" alt="full stack development banner">
                     </div>
                     <div class="course-bottom">
                         <h3>Syllabus - What you will learn from this course</h3>
                         <ol>
-                            <li>Fullstack Developement</li>
-                            <li>MongoDB</li>
-                            <li>Javascript</li>
-                            <li>JSON </li>
+                            <li>Front-End Web Developemnt</li>
                             <li>HTML</li>
+                            <li>CSS</li>
+                            <li>Bootstrap 4</li>
+                            <li>Javascript ES6</li>
+                            <li>jQuery</li>
+                            <li>Backend-Web Developemnt</li>
+                            <li>Node.js</li>
+                            <li>Databases</li>
+                            <li>SQL</li>
+                            <li>MongoDB</li>
                         </ol>
                     </div>
                 </section>
 
-                 <!-- Course -- Introduction to API -->
-                 <section class="course" id="dscourse-5">
+                 <!-- Course -- Introduction to APIs -->
+                 <section class="course" id="wb-course-5">
                     <div class="course-top">
-                        <h2>Introduction to API/h2>
+                        <h2>Introduction to APIs</h2>
                     </div>
                     <div class="course-left">
                         <p>
-                            In this course, you will learn how to Developing APIs with Google Cloud's Apigee API Platform Specialization
+                            Develop APIs with the Apigee API Platform. Learn how to design, build, secure, deploy, 
+                            and manage API solutions using Apigee, Google Cloud's full-lifecycle API management solution
                         </p>
                         <a href="https://www.coursera.org/specializations/apigee-api-gcp">Coursera</a>
                         <p>Cost: $40</p>
                     </div>
                     <div class="course-right">
-                        <img src="img/banner-api.png" alt="api banner">
+                        <img src="img/banner-wb-course-5.jpeg" alt="api banner">
                     </div>
                     <div class="course-bottom">
                         <h3>Syllabus - What you will learn from this course</h3>
                         <ol>
-                            <li>API sequrity</li>
-                            <li>Intro for API</li>
+                            <li>API Design and Fundamentals of Google Cloud's Apigee API Platform</li>
+                            <li>API Security on Google Cloud's Apigee API Platform</li>
+                            <li>API Development on Google Cloud's Apigee API Platform</li>
                         </ol>
                     </div>
                 </section>
