--- a/Exercise1/distributed-systems.html
+++ b/Exercise1/distributed-systems.html
@@ -49,7 +49,7 @@
             </div>
         </section>
 
-        <div>
+        <div class="topic-courses">
             <!-- Sidebar -->
             <aside class="sidebar">
                 <nav>
