--- a/Exercise1/web-dev.html
+++ b/Exercise1/web-dev.html
@@ -50,7 +50,7 @@
             </div>
         </section>
 
-        <div>
+        <div class="topic-courses">
             <!-- Sidebar -->
             <aside class="sidebar">
                 <nav>
