--- a/Exercise1/machine-learning.html
+++ b/Exercise1/machine-learning.html
@@ -53,7 +53,7 @@
             </div>
         </section>
 
-        <div>
+        <div class="topic-courses">
             <!-- Sidebar -->
             <aside class="sidebar">
                 <nav>
