--- a/Exercise1/distributed-systems.html
+++ b/Exercise1/distributed-systems.html
@@ -55,145 +55,165 @@
                 <nav>
                     <h2>Courses</h2>
                     <ul>
-                        <li><a href="#ds-course-1">Introduction, Performance And Consistancy</a></li>
-                        <li><a href="#ds-course-2">Cloud Computing</a></li>
-                        <li><a href="#ds-course-3">Distributed Programming with Java</a></li>
-                        <li><a href="#ds-course-4">Framework</a></li>
-                        <li><a href="#ds-course-5">Create an Distributed App</a></li>
+                        <li><a href="#ds-course-1">Parallel Programming in Java</a></li>
+                        <li><a href="#ds-course-2">Concurrent Programming in Java</a></li>
+                        <li><a href="#ds-course-3">Distributed Programming in Java</a></li>
+                        <li><a href="#ds-course-4">Cloud Computing Concepts, Part 1</a></li>
+                        <li><a href="#ds-course-5">Cloud Computing Concepts: Part 2</a></li>
                     </ul>
                 </nav>
             </aside>
 
             <!-- Course info -->
             <section class="course-list">
-                <!-- Course -- Introduction, Performance And Consistancy -->
+                <!-- Course -- Parallel Programming in Java -->
                 <section class="course" id="ds-course-1">
                     <div class="course-top">
-                        <h2>Introduction, Performance And Consistancy</h2>
+                        <h2>Parallel Programming in Java</h2>
                     </div>
                     <div class="course-left">
                         <p>
-                            In this course, you will study basic terms of Distributed computing and Aquire their primary knowledge.
+                            This course teaches learners (industry professionals and students) the fundamental concepts 
+                            of parallel programming in the context of Java 8. Parallel programming enables developers to 
+                            use multicore computers to make their applications run faster by using multiple processors at 
+                            the same time. By the end of this course, you will learn how to use popular parallel Java frameworks 
+                            (such as ForkJoin, Stream, and Phaser) to write parallel programs for a wide range of multicore platforms 
+                            including servers, desktops, or mobile devices.
                         </p>
-                        <a href="https://www.coursera.org/learn/blockchain-scalability">Coursera</a>
-                        <p>Cost: $15</p>
+                        <a href="https://www.coursera.org/learn/parallel-programming-in-java?specialization=pcdp">Coursera</a>
+                        <p>Cost: $35</p>
                     </div>
                     <div class="course-right">
-                        <img src="img/distributed-system-intro.jpg" alt="d s banner">
+                        <img src="img/banner-parallel-programming.jpg" alt="paralllel programming in java banner">
                     </div>
                     <div class="course-bottom">
                         <h3>Syllabus - What you will learn from this course</h3>
                         <ol>
-                            <li>Introduction to Distributed Systems</li>
-                            <li>Distributed Systems Basics</li>
-                            <li>Different Types and Applications of Distributed Systems</li>
+                            <li>Task Parallelism</li>
+                            <li>Functional Parallelism</li>
+                            <li>Loop Parallelism</li>
+                            <li>Data flow Synchronization and Pipelining</li>
                         </ol>
                     </div>
                 </section>
 
-                <!-- Course -- Cloud Computing -->
+                <!-- Course -- Concurrent Programming in Java -->
                 <section class="course" id="ds-course-2">
                     <div class="course-top">
-                        <h2> Cloud Computing</h2>
+                        <h2>Concurrent Programming in Java</h2>
                     </div>
                     <div class="course-left">
                         <p>
-                            Cloud computing systems today, whether open-source or used inside companies, 
-                            are built using a common set of core techniques, algorithms, and design philosophies –
-                             all centered around distributed systems. 
-                            Learn about such fundamental distributed computing "concepts" for cloud computing.
+                            This course teaches learners (industry professionals and students) the fundamental concepts of 
+                            concurrent programming in the context of Java 8. Concurrent programming enables developers to
+                            efficiently and correctly mediate the use of shared resources in parallel programs.
+                            By the end of this course, you will learn how to use basic concurrency constructs in Java such as 
+                            threads, locks, critical sections, atomic variables, isolation, actors, optimistic concurrency and 
+                            concurrent collections, as well as their theoretical foundations (e.g., progress guarantees, deadlock, 
+                            livelock, starvation, linearizability).
                         </p>
-                        <a href="https://www.coursera.org/learn/cloud-computing">Coursera</a>
+                        <a href="https://www.coursera.org/learn/concurrent-programming-in-java?specialization=pcdp">Coursera</a>
                         <p>Cost: $20</p>
                     </div>
                     <div class="course-right">
-                        <img src="img/cloud-banner.png" alt="cloud banner">
+                        <img src="img/banner-concurrent-programming.png" alt="concurrent programming in java banner">
                     </div>
                     <div class="course-bottom">
                         <h3>Syllabus - What you will learn from this course</h3>
                         <ol>
-                            <li>Cloud computing</li>
-                            <li>Distributed Algorithms</li>
-                            <li>C++</li>
+                            <li>Threads and Locks</li>
+                            <li>Critical Sections and Isolation</li>
+                            <li>Actors</li>
+                            <li>Concurrent Data Structures</li>
                         </ol>
                     </div>
                 </section>
 
-                <!-- Course -- Distributed Programming with Java -->
+                <!-- Course -- Distributed Programming in Java -->
                 <section class="course" id="ds-course-3">
                     <div class="course-top">
-                        <h2>Distributed Programming with Java</h2>
+                        <h2>Distributed Programming in Java</h2>
                     </div>
                     <div class="course-left">
                         <p>
-                            In this course, you will learn how to use java libraries like .net to build basic blocks for your very own Distributed
-                            System. Your will learn how to send messeges and information between different programms, parallel cimputing using java.thread
-                            and more.
+                            This course teaches learners (industry professionals and students) the fundamental concepts of 
+                            Distributed Programming in the context of Java 8. Distributed programming enables developers to 
+                            use multiple nodes in a data center to increase throughput and/or reduce latency of selected applications. 
+                            By the end of this course, you will learn how to use popular distributed programming frameworks for Java programs, 
+                            including Hadoop, Spark, Sockets, Remote Method Invocation (RMI), Multicast Sockets, Kafka, 
+                            Message Passing Interface (MPI), as well as different approaches to combine distribution with multithreading.
                         </p>
-                        <a href="https://www.coursera.org/specializations/pcdp">Coursera</a>
+                        <a href="https://www.coursera.org/learn/distributed-programming-in-java?specialization=pcdp">Coursera</a>
                         <p>Cost: $40</p>
                     </div>
                     <div class="course-right">
-                        <img src="img/java banner.png" alt="java banner">
+                        <img src="img/banner-kafka.png" alt="distributed programming in java banner">
                     </div>
                     <div class="course-bottom">
                         <h3>Syllabus - What you will learn from this course</h3>
                         <ol>
-                            <li>Parallel Computing</li>
-                            <li>Distributed Computing</li>
-                            <li>Actor Model </li>
-                            <li>Java.net</li>
+                            <li>Distributed Map Reduce</li>
+                            <li>Client-Server Programming</li>
+                            <li>Message Passing</li>
+                            <li>Combining Distribution and Multithreading</li>
                         </ol>
                     </div>
                 </section>
 
-                <!-- Course -- Frameworks -->
+                <!-- Course -- Cloud Computing Concepts, Part 1 -->
                 <section class="course" id="ds-course-4">
                     <div class="course-top">
-                        <h2>Frameworks</h2>
+                        <h2>Cloud Computing Concepts, Part 1</h2>
                     </div>
                     <div class="course-left">
                         <p>
-                            In this course, you will begin creating your Distributed System. The First step is creating the base of the app, which is the Framework,
-                            an app that can funtion as your data base, client server or model creator 
+                            Cloud computing systems today, whether open-source or used inside companies, are built using a 
+                            common set of core techniques, algorithms, and design philosophies – all centered around distributed systems. 
+                            Learn about such fundamental distributed computing "concepts" for cloud computing.
                         </p>
-                        <a href="https://www.coursera.org/learn/spark-sql">Coursera</a>
+                        <a href="https://www.coursera.org/learn/cloud-computing?specialization=cloud-computing">Coursera</a>
                         <p>Cost: $40</p>
                     </div>
                     <div class="course-right">
-                        <img src="img/framework-banner.jpg" alt="framework banner">
+                        <img src="img/banner-cloud-1.jpg" alt="cloud computing concepts banner">
                     </div>
                     <div class="course-bottom">
                         <h3>Syllabus - What you will learn from this course</h3>
                         <ol>
-                            <li>Server implementation</li>
-                            <li>Sql</li>
-                            <li>java.net</li>
-                            <li>Special Applications: Face recognition & Neural Style Transfer</li>
+                            <li>Orientation, Introduction to Clouds, MapReduce</li>
+                            <li>Gossip, Membership, and Grids</li>
+                            <li>P2P Systems</li>
+                            <li>Key-Value Stores, Time, and Ordering</li>
+                            <li>Classical Distributed Algorithms</li>
                         </ol>
                     </div>
                 </section>
 
-                 <!-- Course -- Create an Distributed App -->
+                 <!-- Course -- Cloud Computing Concepts: Part 2 -->
                  <section class="course" id="ds-course-5">
                     <div class="course-top">
-                        <h2>Create an Distributed App</h2>
+                        <h2>Cloud Computing Concepts: Part 2</h2>
                     </div>
                     <div class="course-left">
                         <p>
-                            In this course, you will learn how to create an app that distributes your framework and completes your sysytem.
-                            You will also learn the basics for creating an android app.
+                            Know how these systems work from the inside out. Get your hands dirty using these concepts with 
+                            provided homework exercises. In the programming assignments, implement some of these concepts in 
+                            template code (programs) provided in the C++ programming language.
                         </p>
                         <a href="https://www.coursera.org/projects/android-app-kotlin">Coursera</a>
                         <p>Cost: $40</p>
                     </div>
                     <div class="course-right">
-                        <img src="img/android-banner.jpg" alt="android banner">
+                        <img src="img/banner-cloud-2.jpg" alt="cloud computing concepts banner">
                     </div>
                     <div class="course-bottom">
                         <h3>Syllabus - What you will learn from this course</h3>
                         <ol>
-                            <li>Android Application</li>
+                            <li>Course Orientation and Classical Distributed Algorithms Continued</li>
+                            <li>Concurrency and Replication Control</li>
+                            <li>Emerging Paradigms</li>
+                            <li>Classical Systems</li>
+                            <li>Real-Life Behaviors</li>
                         </ol>
                     </div>
                 </section>
