css for navigation bar

--- a/Exercise2/index.html
+++ b/Exercise2/index.html
@@ -11,13 +11,13 @@
     <title>Welcome | SkillDev</title>
 </head>
 <body>
-   <!-- Header bar -->
-   <header class="container">  
+    <!-- Header bar -->
+    <header class="container">  
         <!-- Navigation bar -->
         <nav class="navbar">
             <!-- Webpage icon -->
             <div class="page-icon">
-                <img src="img/logo-md.jpg" alt="webpage icon">
+                <img src="img/logo-sm.jpg" alt="webpage icon">
             </div>
             <!-- Webpage name -->
             <div class="page-name">
@@ -49,7 +49,7 @@
         </section>
 
         <!-- Search bar --> 
-         <section class="search">
+        <section class="search">
             <div class="section-title">
                 <h2> What do you want to learn ?</h2>
             </div>
