--- a/Exercise1/about.html
+++ b/Exercise1/about.html
@@ -57,7 +57,7 @@
         <!-- Stefanos bio -->
         <article id ="Stevebio" class="bio">
             <header class="bio-header">
-                <img src="" alt="stefanos avatar">
+                <img src="img/stephen_prof.jpg" alt="stefanos avatar">
                 <h2>Steve Meidanis</h2>
             </header>
             <section class="bio-info">
