--- a/Exercise2/distributed-systems.html
+++ b/Exercise2/distributed-systems.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Georgios-Stefanos Meidanis (3170107), Lampros Lountzis (3170095)">
     <meta name="keywords" content="MOOC, Free, Online, Classes, CS, Informatics, SkillDev">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/generally_appliable.css" rel="stylesheet">
     <title>Distributed Systems| SkillDev</title>
 </head>
 <body>
@@ -52,6 +53,7 @@
 
         <div class="topic-courses">
             <!-- Sidebar -->
+            <div class= "sidebar-box">
             <aside class="sidebar">
                 <nav>
                     <h2>Courses</h2>
@@ -64,6 +66,8 @@
                     </ul>
                 </nav>
             </aside>
+            </div>
+            
 
             <!-- Course info -->
             <section class="course-list">
