finished promo banner and info banner

--- a/Exercise1/about.html
+++ b/Exercise1/about.html
@@ -27,7 +27,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="topics.html">Topics</a></li>
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="#" class="active">About Us</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
