--- a/Exercise2/index.html
+++ b/Exercise2/index.html
@@ -27,7 +27,7 @@
             <!-- Webpage menu -->
             <div class="page-menu">
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="#" class="active">Home</a></li>
                     <li><a href="topics.html">Topics</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
@@ -38,11 +38,11 @@
 
     <main class="container">
         <!-- Promotion banner -->
-        <section class="banner">
+        <section class="banner promo-banner">
             <div class="banner-left">
                 <h2>Take the next step toward your goals with SkillDev.</h2>
                 <p>Join now to receive personalized recommendations from the full SkillDev catalog.</p>
-                <button class="signup" type="button">Join for Free</button>
+                <a class="signup" href="#">Join for Free</a>
             </div>
             <div class="banner-right">
                 <img src="img/banner-welcome.jpg" alt="welcome banner image">
@@ -61,18 +61,18 @@
         </section>
         
         <!-- Information --> 
-        <section class="banner">
+        <section class="banner info-banner">
             <!-- Principles -->
             <div class="banner-left">
+                <h2>Becoming better</h2>
+                <p>
+                    With more than two dozen distinct learning features to help you achieve your goals, 
+                    our approach follows four key principles:
+                </p>
                 <dl>
-                    <dt>Becoming better</dt>
-                    <dd>
-                        With more than two dozen distinct learning features to help you achieve your goals, 
-                        our approach follows four key principles:
-                    </dd>
                     <dt>Learn</dt>
                     <dd>
-                        Learn new knowledge and skills in a variety of ways, from engaging video lectures and hand-out meaterial to 
+                        Learn new knowledge and skills in a variety of ways, from engaging video lectures and hand-out meterial to 
                         interactive elements and weekly seminars. 
                     </dd>
                     <dt>Practice</dt>
