--- a/Exercise1/contact.html
+++ b/Exercise1/contact.html
@@ -28,7 +28,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="topics.html">Topics</a></li>
                     <li><a href="about.html">About Us</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#" class="active">Contact Us</a></li>
                 </ul>
             </div>
         </nav>
