--- a/Exercise1/topics.html
+++ b/Exercise1/topics.html
@@ -26,7 +26,7 @@
             <div class="page-menu">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Topics</a></li>
+                    <li><a href="#" class="active">Topics</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
